err/digentitymerger.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/digEntityMerger'...
Compiling './lib/python3.5/site-packages/digEntityMerger/basicMerger.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/basicMerger.py", line 63
    .map(lambda (x, y): (y, x))
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digEntityMerger/cleaner.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/cleaner.py", line 41
    .map(lambda (x, y): (y, x))
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digEntityMerger/convertToSeq.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/convertToSeq.py", line 17
    print "Got options:", c_options
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digEntityMerger/create_base_file.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/create_base_file.py", line 17
    print "Got options:", c_options
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digEntityMerger/deduplicator.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/deduplicator.py", line 56
    print "Got options:", c_options
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digEntityMerger/fileUtil.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/fileUtil.py", line 19
    rdd.map(lambda (k, v): FileUtil.__dump_as_json(k, v, options.separator)).saveAsTextFile(filename)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digEntityMerger/framer.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/framer.py", line 109
    print "Write output to:", outputFilename
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digEntityMerger/generateSelfMerge.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/generateSelfMerge.py", line 23
    print "Got options:", c_options, ",input:", inputFilename1 + ", output:", outputFilename
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digEntityMerger/jsonUtil.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/jsonUtil.py", line 244
    print list(JSONUtil.extract_values_from_path(jsonObj1, "assignee.assignee"))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digEntityMerger/merger.py'...
***   File "./lib/python3.5/site-packages/digEntityMerger/merger.py", line 58
    .map(lambda (x, y): (y, x))
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/digEntityMerger-0.4.egg-info'...
Listing './lib/python3.5/site-packages/nose2'...
Listing './lib/python3.5/site-packages/nose2/plugins'...
Listing './lib/python3.5/site-packages/nose2/plugins/loader'...
Listing './lib/python3.5/site-packages/nose2/tests'...
Listing './lib/python3.5/site-packages/nose2/tests/functional'...
Listing './lib/python3.5/site-packages/nose2/tests/unit'...
Listing './lib/python3.5/site-packages/nose2/tools'...
Listing './lib/python3.5/site-packages/nose2-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
